syntax = "proto3";

package blogrpc.member;

option go_package = "member";

import "member/member.proto";

service MemberService {
  rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
  rpc CreateMember(CreateMemberRequest) returns (CreateMemberResponse);
}